<resources>
    <string name="app_name">Android Fundamental Training Final Project</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_settings">Settings</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_search">Search</string>
    <string name="title_watchlist">Watch list</string>
    <string name="title_movies">Movies</string>
    <string name="title_movie_detail">Movie detail</string>
    <string name="error_movie_not_found"> We Are sorry, We Can\nNot Find The Movie :(</string>
    <string name="no_movie_watch_list">There is no movie yet!</string>
    <string name="search_prompt">Find your movie by Type title,\n categories, years, etc </string>
    <string name="top_bar_home_title">What do you want to watch?</string>
    <string name="search_hint">Search</string>
    <string name="update_user_form">Update user form</string>
    <string name="input_new_user_name">Input new user name…</string>
    <string name="verify_your_password">Verify your password…</string>
    <string name="update_user">Update user</string>
    <string name="logout">Logout</string>
    <string name="fetch_data">Fetch data</string>
    <string name="final_project">Android Final Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_movie_name">Spiderman No Way Home</string>
    <string name="sample_paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="sample_review_score">6.3</string>
    <string name="sample_account_username">Iqbal Shafiq Rozaan</string>
    <string name="sample_comment">From DC Comics comes the Suicide Squad, an antihero team of incarcerated supervillains who act as deniable assets for the United States government.</string>
    <string name="sample_cast_name">Tom Holland</string>
    <string name="main_title">What do you want to watch?</string>
    <string name="now_playing">Now playing</string>
    <string name="up_coming">Up coming</string>
    <string name="top_rated">Top rated</string>
    <string name="popular">Popular</string>
    <string name="top_movies_rv">top_movies_rv</string>
    <string name="movies_rv">movies_rv</string>
    <string name="save_to_watch_list">Save to watch list</string>
    <string name="tab_holder">tab_holder</string>
    <string name="no_genres">No genres yet</string>
    <string name="ok">OK</string>
    <string name="rate_this_movie">Rate this movie</string>
    <string name="account_settings">Account settings</string>
</resources>