<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hitachivantara.mobilecoe.android.ui.movies.MoviesViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.movies.MoviesFragment">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_hint"
            app:closeIcon="@drawable/ic_close_24"
            app:searchIcon="@drawable/search"
            android:background="@drawable/search_bkg"
            android:backgroundTint="@color/super_light_gray"
            android:layout_margin="20dp"
            android:layoutDirection="rtl"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_movies"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar"
            tools:listitem="@layout/item_top_movie"
            android:contentDescription="@string/top_movies_rv"
            />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tabLayoutStyle"
            >
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_now_playing"
                android:text="@string/now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_upcoming"
                android:text="@string/up_coming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_top_rated"
                android:text="@string/top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_popular"
                android:text="@string/popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.tabs.TabLayout>
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/rv_wrapper"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:onRefreshListener="@{()->viewModel.fetchMovies()}"
            app:refreshing="@{viewModel.isLoading}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                android:padding="10dp"
                tools:listitem="@layout/item_movie"
                android:contentDescription="@string/movies_rv"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/main_body"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:constraint_referenced_ids="rv_wrapper, tabs"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>