<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeViewModel"
            type="com.hitachivantara.mobilecoe.android.ui.settings.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text='@{homeViewModel.user.displayName}'
            android:textAlignment="center"
            style="@style/movie_title"
            app:layout_constraintBottom_toTopOf="@+id/update_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Welcome username!!" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/update_form"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/login_form_border"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_home">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/update_user_form"
                android:textAllCaps="true"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/input_new_user_name"
                android:imeOptions="actionNext"
                android:backgroundTint="@color/smoke_white"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:singleLine="true"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/verify_your_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:backgroundTint="@color/smoke_white"
                android:singleLine="true"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="14dp"
                android:background="@color/orange"
                android:textColor="@color/black"
                android:onClick="@{}"
                android:text="@string/update_user" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            style="@style/Button.Submit"
            android:layout_width="220dp"
            android:layout_height="56dp"
            android:background="@drawable/submit_button_bg"
            android:layout_gravity="center"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/logout"
            android:textColor="#212121"
            app:layout_constraintEnd_toEndOf="@id/update_form"
            app:layout_constraintStart_toStartOf="@id/update_form"
            app:layout_constraintTop_toBottomOf="@id/update_form" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>