<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchResultFragment">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_hint"
            app:closeIcon="@drawable/ic_close_24"
            app:searchIcon="@drawable/search"
            android:background="@drawable/search_bkg"
            android:backgroundTint="@color/super_light_gray"
            android:layout_margin="20dp"
            android:layoutDirection="rtl"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_bar"
            tools:listitem="@layout/item_movie_large"
           />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/no_results"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/rv_search_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_search_no_results"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:src="@drawable/no_results_img_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.376" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_no_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_movie_not_found"
                app:layout_constraintTop_toBottomOf="@id/img_search_no_results"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/prompt_text"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_search_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_prompt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_no_results"
                style="@style/subtitleText"
                android:textAlignment="center"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.Group
            android:id="@+id/no_results_group"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="no_results"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>