<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movie"
            type="com.hitachivantara.mobilecoe.android.data.model.Movie" />
    </data>

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.movies.subInfo.MovieDetailActivity">

            <FrameLayout
                android:id="@+id/banner_holder"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.001">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/banner_img"
                        img_poster="@{movie.backdrop_path}"
                        android:layout_width="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:layout_height="210dp"
                        tools:src="@color/smoke_white"
                        />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:orientation="horizontal"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="29dp"
                    android:elevation="2dp"
                    >

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_wrapper"
                        android:layout_width="95dp"
                        android:layout_height="120dp"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="5dp"
                        app:cardCornerRadius="16dp"
                        tools:src="@color/sky_blue">

                        <androidx.appcompat.widget.AppCompatImageView
                            img_poster="@{movie.poster_path}"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:scaleType="fitXY"
                            tools:src="@color/sky_blue" />

                    </androidx.cardview.widget.CardView>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/movie_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="1dp"
                        android:text="@{movie.title}"
                        tools:text="@string/sample_movie_name" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_bg"
                    android:layout_gravity="end|bottom"
                    android:elevation="4dp"
                    android:layout_marginBottom="80dp"
                    android:layout_marginEnd="5dp">

                    <TextView
                        android:id="@+id/rating_overall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@{String.valueOf(movie.vote_average)}"
                        android:textColor="@color/orange"
                        app:drawableStartCompat="@drawable/star"
                        tools:text="@string/sample_review_score" />
                </RelativeLayout>


            </FrameLayout>


            <LinearLayout
                android:id="@+id/common_info_holder"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/banner_holder"
                android:gravity="center"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icon_calender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calendarblank"
                    android:layout_gravity="center"
                    android:tint="@color/light_gray"
                    android:layout_marginEnd="2dp"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_release_date"
                    style="@style/subtitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textAlignment="gravity"
                    app:modified_date='@{movie.release_date}'
                    tools:text="2012-29-01"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"/>

                <View android:layout_width="1dip"
                    android:layout_height="17dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/light_gray"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icon_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/clock"
                    android:tint="@color/light_gray"
                    android:layout_marginEnd="2dp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_duration"
                    style="@style/subtitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:text='@{movie.original_language}'
                    tools:text="120 minutes"
                    android:layout_marginTop="1dp"/>

                <View android:layout_width="1dip"
                    android:layout_height="17dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/light_gray"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/icon_ticket"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ticket"
                        android:layout_gravity="center"
                        android:tint="@color/light_gray"
                        android:layout_marginRight="2dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="2dp"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_genres"
                        style="@style/subtitleText"
                        stringify="@{movie.genres}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:layout_gravity="center"
                        tools:text="Action, Horror"
                        android:layout_marginTop="1dp"
                        android:layout_marginStart="1dp"
                        app:layout_constraintStart_toEndOf="@id/icon_ticket"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>



            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:contentDescription="@string/tab_holder"
                android:id="@+id/tabs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/common_info_holder"
                app:layout_constraintVertical_bias="0.038"
                style="@style/tabLayoutStyle">

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabs"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/main_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="viewPager, tabs, common_info_holder, banner_holder  "/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/black"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>